# Rust-Function-Lab

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LESSONS.md  LICENSE  README.md  SECURITY.md  book.toml  examples-and-scripts.html  full-rust-functions-guide.html  getting-started.html  index.html  lesson-map.html  playbook.html  print.html  quality-gates.html  searcher-c2a407aa.js  searchindex-17efc9f3.js  toc-a5f1982f.js  toc.html  tutorial.html
.github/workflows/: ci.yml  deploy-mdbook-pages.yml
book-src/: SUMMARY.md  examples-and-scripts.md  full-rust-functions-guide.md  getting-started.md  index.md  lesson-map.md  playbook.md  quality-gates.md  tutorial.md
docs/: rust-edu-learning-playbook.md  tutorial-rust-functions.md
examples/: lesson_basic.rs  lesson_closures.rs  lesson_error_handling.rs  lesson_iterators.rs  lesson_memoization.rs  lesson_ownership.rs  lesson_pipeline.rs
scripts/: build-mdbook.sh  quality.sh
src/: lib.rs  main.rs
src/lessons/: closures.rs  error_handling.rs  iterators.rs  lesson_core.rs  memoization.rs  mod.rs  ownership.rs  pipeline.rs
